@@ -4,7 +4,7 @@
 
 from __future__ import annotations
 
-__version__ = "2.14.0-dev0"
+__version__ = "3.0.0-a5"
 
 
 def get_numversion_from_version(v: str) -> tuple[int, int, int]:
