@@ -1,7 +1,7 @@
 github_url = "https://github.com/PyCQA/pylint"
 
 [version]
-current = "2.14.0-dev0"
+current = "3.0.0-a5"
 regex = '''
 ^(?P<major>0|[1-9]\d*)
 \.
@@ -20,6 +20,8 @@ tag_template = "v{new_version}"
 # tbump.toml location.
 [[file]]
 src = "pylint/__pkginfo__.py"
+[[file]]
+src = "ChangeLog"
 
 # You can specify a list of commands to
 # run after the files have been patched
